# Keratin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  main.py  pyproject.toml  rhino_script.py  test_control.py
.claude/: launch.json  settings.local.json
.github/workflows/: python-publish.yml
playbooks/: 01_signet_ring.md
rhino_mcp/: __init__.py  rhino_tools.py  server.py  server_sse.py  web_server.py
rhino_mcp/resources/: rhino_command_roster.py  rhino_script_categories.py
tools/ops/: README.md  diagnose_rhino_connection.py  log_manager.py
yak-package/: README.md  manifest.yml  rhino_script.py
