[project]
name = "keratin"
version = "0.1.3"
description = "AI-powered Rhino3D MCP bridge — connect Claude to Rhinoceros 3D"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Aarik W"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["rhino", "mcp", "ai", "claude", "cad", "rhinoscript", "grasshopper"]
dependencies = [
    "mcp[cli]>=1.3.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "pillow>=9.4.0",
    "requests>=2.28.0",
    "python-dotenv>=0.21.0",
    "starlette>=0.27.0",
    "httpx>=0.24.0",
    "anyio>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/aarik/keratin"
Repository = "https://github.com/aarik/keratin"

[project.scripts]
keratin = "rhino_mcp.server:main"
keratin-web = "rhino_mcp.web_server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}
